--- a/src/components/TwoCards/TwoCards.module.scss
+++ b/src/components/TwoCards/TwoCards.module.scss
@@ -7,6 +7,7 @@
 	padding-inline: 80px;
 	max-width: 1440px;
 	width: 100vw;
+	margin-top: -154px;
 	@media (max-width: 1024px) {
 		margin-top: -144px;
 		transform: translateY(204px);
